# rust-actions-toolkit

./: .actionlint.yml  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DOCKER_CACHE_OPTIMIZATION.md  DOCKER_STATUS.md  MARKETPLACE.md  README.md  README_zh.md  RELEASE_NOTES_V2_5_6.md  RUST_VERSION_CONFIG.md  USAGE.md  action.yml  release-please-config.json  release-plz.toml  renovate.json  rust-actions-toolkit-consistency-improvement.md
.github/actions/setup-build-env/: action.yml
.github/scripts/: build-binary.sh  check-build-results.sh  create-archive.sh  detect-binary.sh  run-ci-checks.sh  setup-build-env.sh
.github/workflows/: ci.yml  core-ci.yml  docker-build.yml  enhanced-release.yml  publish-action.yml  release-plz.yml  release.yml  reusable-ci.yml  reusable-release-plz.yml  reusable-release.yml
actions/release-plz/: action.yml
actions/rust-release/: action.yml
actions/setup-build-env/: action.yml
actions/setup-rust-ci/: action.yml
actions/smart-release/: README.md  action.yml
actions/upload-release-artifacts/: README.md  action.yml
docker/: README.md  base.Dockerfile  cross-compile.Dockerfile  python-wheels.Dockerfile  security-audit.Dockerfile
docker/build-scripts/: build-wheels.sh  build-windows.sh  cross-build.sh  generate-sbom.sh  license-check.sh  security-scan.sh  test-wheels.sh  verify-static.sh
docs/: BEST_PRACTICES.md  BEST_PRACTICES_V2_5_3.md  CI_CARGO_BUILD_TARGET_FIX.md  CI_CONSISTENCY_IMPROVEMENTS.md  CROSS_COMPILATION_ISSUES.md  DEVELOPER_GUIDE.md  GITHUB_2025_BEST_PRACTICES.md  GITHUB_ACTIONS_LINTING.md  GITHUB_TOKEN_ISSUE.md  MIGRATION_TO_V2_5_3.md  MIMALLOC_TROUBLESHOOTING.md  OPENSSL_TROUBLESHOOTING.md  PLATFORM_SUPPORT_STRATEGY_2025.md  PROC_MACRO_CROSS_COMPILATION.md  PROC_MACRO_CROSS_COMPILATION_FIX.md  RELEASE_BUILD_CONSISTENCY.md  THIRD_PARTY_ACTIONS_AUDIT.md  V4_DESIGN_PHILOSOPHY.md  V4_QUICK_START.md  WORKFLOW_ROBUSTNESS_FIXES.md
examples/: py2pyd-release.yml  release-comparison.yml  release-template.md  simple-release-template.md  zero-config-release.yml
examples/binary-crate/: release-plz.toml
examples/ci-release-consistency-test/: README.md  ci.yml  release.yml
examples/complete-project-setup/: README.md
examples/composite-actions/: ci.yml
examples/cross-compilation/: Cross-mimalloc.toml  Cross-no-docker.toml  Cross-proc-macro-fixed.toml  Cross-proc-macro-ultimate-fix.toml  Cross-proc-macro-ultimate.toml  Cross-simple-fix.toml  Cross-simple-proc-macro.toml  Cross.toml  README.md  turbo-cdn-Cross.toml
examples/docker/: README.md  windows-build.yml  zero-dependency-builds.md
examples/enhanced-ci/: README.md  ci.yml  release.yml
examples/github-action/: complete-setup.yml  release-plz.yml  simple-ci.yml
examples/migration/: py2pyd-migration.md  turbo-cdn-v4-migration.md  v2-to-v3-migration.md
examples/pure-crate/: release-plz.toml
examples/python-wheel/: pyproject.toml  release-plz.toml
examples/reusable-workflows/: ci.yml  release-plz.yml  release.yml
examples/security-audit/: README.md
examples/v4/: turbo-cdn-ci.yml  turbo-cdn-release.yml
scripts/: lint-actions.sh
src/: lib.rs
